fixed spacing

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ a:hover {
 @media screen and (min-width: 800px){
   .sitebox {
     grid-template-columns: 18% 9% 31% 4% 29% 2% 6%;
-    grid-template-rows: 10vw 10vw 10vw; 
+    grid-template-rows: 7vw 10vw 10vw; 
     
   }
 
